--- a/app/templates/carrier/truck/all.html
+++ b/app/templates/carrier/truck/all.html
@@ -54,7 +54,7 @@
 
                                     <a href="{{ url_for('trucks.edit', truck_id=truck.id)}}" class="btn btn-primary btn-mini">Edit</a>
                                     
-                                    <a href="{{ url_for('trucks.delete', truck_id=truck.id)}}" class="btn btn-danger btn-mini delete">Delete</a>
+                                    <a href="{{ url_for('trucks.delete', truck_id=truck.id)}}" class="btn btn-danger btn-mini delete" onclick="return confirm('Are you sure you want to delete this?')">Delete</a>
                                 </td>
                             </tr>
                         {% endfor %}
