--- a/app/templates/carrier/driver/create.html
+++ b/app/templates/carrier/driver/create.html
@@ -15,7 +15,11 @@
 				<div class="panel-body">
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							First Name
+							First Name<span class="symbol required"></span>
+
+					          {% for error in form.first_name.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.first_name(size=50, placeholder="First Name", class="form-control") }}
@@ -23,7 +27,10 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Last Name
+							Last Name<span class="symbol required"></span>
+							{% for error in form.last_name.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.last_name(size=50, placeholder="Last Name", class="form-control") }}
@@ -31,7 +38,10 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Email
+							Email<span class="symbol required"></span>
+							{% for error in form.email.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.email(size=50, placeholder="Email", class="form-control") }}
@@ -39,8 +49,17 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Phone Number
+							Phone Number<span class="symbol required"></span>
 						</label>
+						{% for error in form.phone_area_code.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
+					          {% for error in form.phone_prefix.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
+					          {% for error in form.phone_line_number.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						<div class="col-sm-9">
 							+1 ({{ form.phone_area_code(size=3, class='input-mini') }})-{{ form.phone_prefix(size=3, class='input-mini') }}-{{ form.phone_line_number(size=4, class='input-mini') }}
 						</div>
