--- a/app/templates/carrier/truck/create.html
+++ b/app/templates/carrier/truck/create.html
@@ -13,7 +13,10 @@
 				<div class="panel-body">
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Truck Name
+							Truck Name<span class="symbol required"></span>
+							{% for error in form.name.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.name(size=50, placeholder="Truck Name", class="form-control") }}
@@ -21,7 +24,10 @@
 					</div>
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
-							Trailer Type
+							Trailer Type<span class="symbol required"></span>
+							{% for error in form.trailer_type.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.trailer_type(class="form-control") }}
@@ -30,6 +36,9 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
 							Max Weight
+							{% for error in form.max_weight.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.max_weight(size=50, placeholder="Max Weight", class="form-control") }}
@@ -38,6 +47,9 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
 							Length
+							{% for error in form.dim_length.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.dim_length(size=50, placeholder="Length", class="form-control") }}
@@ -46,6 +58,9 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
 							Height
+							{% for error in form.dim_height.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.dim_height(size=50, placeholder="Height", class="form-control") }}
@@ -55,6 +70,9 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label" for="origin_address1">
 							Width
+							{% for error in form.dim_width.errors %}
+					            <br><span style="color: red;">{{ error }}</span>
+					          {% endfor %}
 						</label>
 						<div class="col-sm-9">
 							{{ form.dim_width(size=50, placeholder="Height", class="form-control") }}
