--- a/app/templates/carrier/truck/view.html
+++ b/app/templates/carrier/truck/view.html
@@ -65,6 +65,10 @@
 								<td><b>Phone:</b></td>
 								<td>{{ truck.driver.get_phone_number() }}
 							</tr>
+							<tr>
+								<td><b>Email:</b></td>
+								<td>{{ truck.driver.email }}</td>
+							</tr>
 						</tbody>
 					</table>
 	        	{% else %}
