--- a/app/templates/base_map.html
+++ b/app/templates/base_map.html
@@ -29,6 +29,11 @@
         <link rel="stylesheet" href="{{ static('backend/css/theme_light.css') }}" type="text/css" id="skin_color">
         <link rel="stylesheet" href="{{ static('backend/css/print.css') }}" type="text/css" media="print"/>
         <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+        <link rel="stylesheet" type="text/css" href="{{ static('backend/plugins/select2/select2.css') }}" />
+        <link rel="stylesheet" href="{{ static('backend/plugins/DataTables/media/css/DT_bootstrap.css') }}" />
+        <link rel="stylesheet" href="{{ static('backend/plugins/datepicker/css/datepicker.css') }}">
+        <link rel="stylesheet" href="{{ static('backend/plugins/bootstrap-modal/css/bootstrap-modal-bs3patch.css') }}"  type="text/css"/>
+        <link rel="stylesheet" href="{{ static('backend/plugins/bootstrap-modal/css/bootstrap-modal.css') }}"  type="text/css"/>
         <!--[if IE 7]>
         {#<link rel="stylesheet" href="{{ static('backend/plugins/font-awesome/css/font-awesome-ie7.min.css') }}">#}
         <![endif]-->
