--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -5,4 +5,6 @@
   <h1>An unexpected error has occurred</h1>
   <p>The administrator has been notified. Sorry for the inconvenience!</p>
   <p><a href="{{ url_for('static.index') }}">Back</a></p>
+
+  {{ error }}
 {% endblock %}
