--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -474,7 +474,7 @@
 							'							<\/div>' +
 							'							<div class=\"form-group\">' +
 							'								<label class=\"col-sm-3 control-label\">' +
-							'									Notes <span class=\"symbol required\"><\/span>' +
+							'									Notes' +
 							'								<\/label>' +
 							'								<div class=\"col-sm-7\">' +
 							'									<textarea class=\"autosize form-control\" id=\"locations-' + index + '-pickup_notes\" name=\"locations-' + index + '-pickup_notes\" style=\"overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;\"><\/textarea>' +
@@ -504,7 +504,7 @@
 							'							<\/div>' +
 							'							<div class=\"form-group\">' +
 							'								<label class=\"col-sm-3 control-label\">' +
-							'									Notes <span class=\"symbol required\"><\/span>' +
+							'									Notes' +
 							'								<\/label>' +
 							'								<div class=\"col-sm-7\">' +
 							'									<textarea class=\"autosize form-control\" id=\"locations-' + index + '-delivery_notes\" name=\"locations-' + index + '-pickup_notes\" style=\"overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;\"><\/textarea>' +
