--- a/app/templates/load/edit.html
+++ b/app/templates/load/edit.html
@@ -378,7 +378,7 @@
 											</div>
 											<div class="form-group">
 												<label class="col-sm-3 control-label">
-													Notes <span class="symbol required"></span>
+													Notes
 												</label>
 												<div class="col-sm-7">
 													<textarea class="autosize form-control" id="locations-{{ loop.index }}-pickup_notes" name="locations-{{ loop.index }}-pickup_notes" style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;"></textarea>
@@ -408,7 +408,7 @@
 											</div>
 											<div class="form-group">
 												<label class="col-sm-3 control-label">
-													Notes <span class="symbol required"></span>
+													Notes
 												</label>
 												<div class="col-sm-7">
 													<textarea class="autosize form-control" id="locations-{{ loop.index }}-delivery_notes" name="locations-{{ loop.index }}-pickup_notes" style="overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;"></textarea>
@@ -727,7 +727,7 @@
 							'							<\/div>' +
 							'							<div class=\"form-group\">' +
 							'								<label class=\"col-sm-3 control-label\">' +
-							'									Notes <span class=\"symbol required\"><\/span>' +
+							'									Notes' +
 							'								<\/label>' +
 							'								<div class=\"col-sm-7\">' +
 							'									<textarea class=\"autosize form-control\" id=\"locations-' + index + '-pickup_notes\" name=\"locations-' + index + '-pickup_notes\" style=\"overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;\"><\/textarea>' +
@@ -757,7 +757,7 @@
 							'							<\/div>' +
 							'							<div class=\"form-group\">' +
 							'								<label class=\"col-sm-3 control-label\">' +
-							'									Notes <span class=\"symbol required\"><\/span>' +
+							'									Notes' +
 							'								<\/label>' +
 							'								<div class=\"col-sm-7\">' +
 							'									<textarea class=\"autosize form-control\" id=\"locations-' + index + '-delivery_notes\" name=\"locations-' + index + '-pickup_notes\" style=\"overflow: hidden; word-wrap: break-word; resize: horizontal; height: 69px;\"><\/textarea>' +
