--- a/app/templates/static/login.html
+++ b/app/templates/static/login.html
@@ -34,9 +34,9 @@
 							<span class="input-icon">
 								{{ login_form.password(class="form-control password", placeholder="Password") }}{#<input type="password" class="form-control password" name="password" placeholder="Password">#}
 								<i class="fa fa-lock"></i>
-								<a class="forgot" href="?box=forgot">
+								<!--<a class="forgot" href="?box=forgot">
 									I forgot my password
-								</a> </span>
+								</a>--> </span>
 						</div>
 						<div class="form-actions">
 							<label for="remember" class="checkbox-inline">
@@ -47,12 +47,12 @@
 								Login <i class="fa fa-arrow-circle-right"></i>
 							</button>
 						</div>
-						<div class="new-account">
+						<!--<div class="new-account">
 							Don't have an account yet?
 							<a href="?box=register" class="register">
 								Create an account
 							</a>
-						</div>
+						</div>-->
 					</fieldset>
 				</form>
 			</div>
