Updates/no admin

--- a/app/templates/static/login.html
+++ b/app/templates/static/login.html
@@ -47,12 +47,12 @@
 								Login <i class="fa fa-arrow-circle-right"></i>
 							</button>
 						</div>
-						<div class="new-account">
+						<!--<div class="new-account">
 							Don't have an account yet?
 							<a href="?box=register" class="register">
 								Create an account
 							</a>
-						</div>
+						</div>-->
 					</fieldset>
 				</form>
 			</div>
