--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -56,13 +56,13 @@
 				                        {% endfor %}
 				                    </tbody>
 				                </table>
-				                <div class="form-group">
+				                <!--<div class="form-group">
 									<div class="col-sm-5 col-sm-offset-7">
 										<button type="submit" class="btn btn-success btn-block">
 											Update Status <i class="fa fa-arrow-circle-right"></i>
 										</button>
 									</div>
-								</div>
+								</div>-->
 							</form>
 	                	</div>
 	            	</div>
