--- a/app/templates/load/create.html
+++ b/app/templates/load/create.html
@@ -169,7 +169,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div class="panel panel-default">
+					{#<div class="panel panel-default">
 						<div class="panel-heading">
 							<i class="fa fa-external-link-square"></i>
 							Locations
@@ -192,7 +192,6 @@
 											<th>State</th>
 											<th>Zip</th>
 											<th>Arrival Date</th>
-											{#<th>Arrival Time</th>#}
 											<th>Delete</th>
 										</tr>
 									</thead>
@@ -202,7 +201,7 @@
 								</table>
 							</div>
 						</div>
-					</div>
+					</div>#}
 
 				</div>
 				<hr>
