--- a/app/templates/base_map.html
+++ b/app/templates/base_map.html
@@ -66,9 +66,21 @@
                         map: map,
                         title: '{{ location.stop_number }}'
                     });
+
+
                 {% endfor %}
 
+                {% for longlat in load.tracker %}
+                    var myLatlng = new google.maps.LatLng( {{longlat.latitude}}, {{longlat.longitude}});
+
+                    var marker = new google.maps.Marker({
+                        position: myLatlng,
+                        map: map,
+                        title: '{{ loop.index }}'
+                    });
+                {% endfor %}
             }
+
 
             google.maps.event.addDomListener(window, 'load', initialize);
 
