--- a/app/templates/load/view.html
+++ b/app/templates/load/view.html
@@ -1,7 +1,16 @@
 {% extends "layout_map.html" %}
 
 {% block content %}
+	<div class="row-fluid">
+		<div class="col-sm-12 text-right">
 
+			{% if load.assigned_driver is not none %}
+			<a href="javascript:ping_driver({{ load.assigned_driver.truck.id }});" class="new-modal btn btn-green">
+										Ping Driver
+									</a>
+			{% endif %}
+		</div>
+	</div>
 	<div class="row-fluid">
 	    <div class="col-sm-12">
 	    	<div class="row">
@@ -235,6 +244,36 @@
 		    </div>
 
 	    </div> 
+
+<table class="table table-bordered table-hover table-condensed" id="sample-table-1">
+				                    <thead>
+				                        <tr>
+				                            <th>Details</th>
+				                            <th>Stop #</th>
+				                            <!--<th>Status</th>-->
+				                        </tr>
+				                    </thead>
+				                    <tbody>
+				                        {% for longlat in load.tracker %}
+				                            <tr>
+				                            	<td>{{ longlat.longitude }}</td>
+				                            	<td>{{ longlat.latitude }}</td>
+				                            	
+				                        {% endfor %}
+				                    </tbody>
+				                </table>
+
+<script>
+function ping_driver(truckID) {
+	alert('hi');
+    $.post('/trucks/ping/'+truckID)
+	.done(function(translated) {
+       	alert(translated['message']);
+    }).fail(function() {
+        alert('failed');
+    });
+}
+</script>
 
 
 
